Fixed when resizing not showing navbar menu

--- a/BookCreator/BookCreatorApp/wwwroot/css/main.css
+++ b/BookCreator/BookCreatorApp/wwwroot/css/main.css
@@ -1882,7 +1882,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   right: 0;
   transition: all 0.5s;
-  z-index: 997;
+  z-index: 100;
 }
 
 #header.header-scrolled {
@@ -1997,11 +1997,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@media (max-width: 768px) {
+/*vallec*/
+/*@media (max-width: 768px) {
   #nav-menu-container {
     display: none;
   }
-}
+}*/
 
 /* Nav Meu Styling */
 .nav-menu a {
@@ -2066,15 +2067,15 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   font-weight: 900;
 }
-
-@media (max-width: 800px) {
+/*vallec*/
+/*@media (max-width: 768px) {
   #mobile-nav-toggle {
     display: inline;
   }
   #nav-menu-container {
     display: none;
   }
-}
+}*/
 
 /* Mobile Nav Styling */
 #mobile-nav {
